<resources>
    <string name="app_name">章鱼娱乐</string>
    <string name="hello_blank_fragment"></string>
    <string name="account">账号</string>
    <string name="login_hint">章鱼来了 吃饭 睡觉 打比特币</string>
    <string name="login_password">密码</string>
    <string name="login">立即登录</string>
    <string name="account_detail">账户明细</string>
    <string name="recently_play">最近在玩</string>
    <string name="recommend_game">推荐游戏</string>
    <string name="payed_game">单机游戏</string>
    <string name="mini_game">小游戏</string>
    <string name="down_load">获  取</string>
    <string name="wallet">钱  包</string>
    <string name="game">游戏</string>
    <string name="non_enough_average">没有足够的评分</string>
    <string name="new_function">新功能</string>
    <string name="version_history">版本历史纪录</string>
    <string name="update_content_hint">[版本更新内容]</string>
    <string name="more">更多</string>
    <string name="preview">预览</string>
    <string name="friend_circle">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shame">摇一摇</string>
    <string name="see_see">看一看</string>
    <string name="search_search">搜一搜</string>
    <string name="nearBy">附近的人</string>
    <string name="float_ping">漂流瓶</string>
    <string name="friend">朋友</string>
    <string name="click_again_will_exit">再次按下返回键退出程序</string>
    <string name="level">会员等级</string>
    <string name="total_amount">总 额</string>
    <string name="freeze_amount">冻结额度</string>
    <string name="lock_amount">锁定额度</string>
    <string name="trans_in">转入</string>
    <string name="trans_out">转出</string>
    <string name="exchange">兑换</string>
    <string name="check_in">签到挖矿</string>
    <string name="zy_promise">章鱼娱乐承诺:成为章鱼矿工,终身享受平台游戏娱乐,不再收取任何费用!</string>
    <string name="get_gift">获取礼包</string>
    <string name="gift_paid">已购买</string>
    <string name="red_packet">红包</string>
    <string name="open_rp">领取红包</string>
    <string name="check_rp">查看红包</string>
    <string name="rp_push_content">发来了一个红包</string>
    <string name="confirm">确定</string>
    <string name="game_market">游戏商城</string>
    <string name="shop_hint">目前只开放话费兑换\n其他功能敬请期待</string>
    <string name="shop_hint_all">|  全部</string>
    <string name="market">商城</string>
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="add_buddy">添加好友</string>
    <string name="user_info_update_failed">设置失败，请重试</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="charge_center">充值中心</string>
    <string name="charge_phone">充话费</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="confirm_charge">确认充值</string>
    <string name="charge_immediately">立即充值</string>
    <string name="charge_type">充值方式</string>
    <string name="every_day">每日行情</string>
    <string name="coin">货币</string>
    <string name="new_price">最新价/流通市值</string>
    <string name="top_bottom">涨跌幅</string>
    <string name="me">我</string>
    <string name="assets">可兑换资产</string>
    <string name="exchange_amount">兑换数量</string>
    <string name="assets_transform">可转出资产</string>
    <string name="game_id">游戏ID</string>
    <string name="address">地址</string>
    <string name="keep_pass">记住账号和密码</string>
    <string name="forget_pass"><u>忘记密码</u></string>
    <string name="modify_pass">修改密码</string>
    <string name="phone_number">手机号</string>
    <string name="new_login_pass">新登录密码</string>
    <string name="confirm_new_pass">再输入新密码</string>
    <string name="verify_code">验证码</string>
    <string name="input_pass">输入密码</string>
    <string name="input_pass_again">再输入新密码</string>
    <string name="input_verifyCode">输入验证码</string>
    <string name="get_verifyCode">获取验证码</string>
    <string name="back">返回</string>
    <string name="my_packet">背包</string>
    <string name="benefit_curMonth">本月收益</string>
    <string name="benefit_curDay">本日收益</string>
    <string name="benefit_total">累计收益</string>
    <string name="empty"></string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="readed">已读</string>
    <string name="unread">未读</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2018 网易公司版权所有</string>
    <string name="edit">编辑</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_ack_msg">已读回执</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="team_num_limit">群数量已达上限</string>
    <string name="custom_notification">自定义通知</string>
    <string name="select_custom_notification_target">选择发送对象</string>
    <string name="send_custom_notification_tip">请输入要发送的内容</string>
    <string name="send_custom_notification_success">自定义通知发送成功</string>
    <string name="send_custom_notification_failed">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy">发送给好友</string>
    <string name="send_custom_notification_to_team">发送给群组</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="about_clear_msg_history">清空所有聊天记录</string>
    <string name="clear_msg_history_success">聊天记录已清空</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="settings">设置</string>
    <string name="no_disturb">免打扰</string>
    <string name="multiport_push">PC/Web在线推送</string>
    <string name="msg_notice">消息提醒</string>
    <string name="setting_about">关于</string>
    <string name="setting_close">已关闭</string>
    <string name="no_disturb_tips">在设定的时间段内云信消息将不再提醒</string>
    <string name="time_from">从</string>
    <string name="time_to">至</string>
    <string name="time_from_default">22:00</string>
    <string name="time_to_default">08:00</string>
    <string name="black_list">黑名单</string>
    <string name="msg_speaker">听筒模式</string>
    <string name="ring">响铃模式</string>
    <string name="led">自定义呼吸灯</string>
    <string name="notice_content">通知栏标题定制</string>
    <string name="clear_index">清理全文检索缓存</string>
    <string name="clear_sdk_cache">清理SDK文件缓存</string>
    <string name="push_no_detail">推送不展示消息详情</string>
    <string name="operation_too_frequent">操作太频繁</string>
    <string name="multiport_manager">多端登录管理</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="multiport_logging">正在使用</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="short_video_demo">短视频Demo</string>
    <string name="video_reach_limit">视频数量已达到上限</string>
    <string name="video_reach_limit_content">若继续拍摄视频将保存在本地，无法上传！</string>
    <string name="continue_shooting">继续拍摄</string>
    <string name="go_delete_video">去删除视频</string>
    <string name="wifi_confirm">正在使用手机流量上传，是否继续？</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="delete_confirm_tip">确定删除该视频，删除后不可恢复</string>
    <string name="upload_failed">上传失败</string>
    <string name="retry">重试</string>
</resources>