<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.EveryDayActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constrain_everyDay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_120"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/icon_back_48"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/me"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_every"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_every" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title_every"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_day"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            android:layout_marginTop="@dimen/size_30"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/size_14"
            android:layout_marginStart="@dimen/size_14"
            android:layout_marginTop="@dimen/size_24"
            android:background="@drawable/every_title_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_every">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/coin"
                android:textColor="#A4A4A4"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/new_price"
                android:textColor="#A4A4A4"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/top_bottom"
                android:textColor="#A4A4A4"
                android:textSize="@dimen/font_14" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_every"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E7E7E7"
        android:overScrollMode="never"
        android:paddingEnd="@dimen/size_14"
        android:paddingStart="@dimen/size_14"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constrain_everyDay" />
</android.support.v7.widget.LinearLayoutCompat>