<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/size_320"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_white_10">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_close_64"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingStart="@dimen/size_20"
            android:paddingEnd="@dimen/size_10"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:text="@string/modify_pass"
            android:textSize="@dimen/font_14"
            android:textColor="@color/sj_theme_color"
            android:layout_height="wrap_content" />
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ececec"
        android:layout_marginStart="@dimen/size_6"
        android:layout_marginEnd="@dimen/size_6"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:gravity="end"
        android:layout_marginEnd="@dimen/size_20">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/deep_gray"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:inputType="phone"
            android:layout_width="@dimen/size_190"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:paddingStart="@dimen/size_10"
            android:maxLength="11"
            android:textColor="@color/sj_theme_color"
            android:layout_marginStart="@dimen/size_10"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:gravity="end"
        android:layout_marginEnd="@dimen/size_20">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_login_pass"
            android:textColor="@color/deep_gray"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_new_pass"
            android:layout_width="@dimen/size_190"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:paddingStart="@dimen/size_10"
            android:maxLength="15"
            android:inputType="textPassword"
            android:textColor="@color/sj_theme_color"
            android:layout_marginStart="@dimen/size_10"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:gravity="end"
        android:layout_marginEnd="@dimen/size_20">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_pass_again"
            android:textColor="@color/deep_gray"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_pass_confirm"
            android:inputType="textPassword"
            android:layout_width="@dimen/size_190"
            android:maxLength="15"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:paddingStart="@dimen/size_10"
            android:textColor="@color/sj_theme_color"
            android:layout_marginStart="@dimen/size_10"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="@dimen/size_20"
        android:layout_marginTop="@dimen/size_20">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:textColor="@color/deep_gray"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_verifyCode"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:paddingStart="@dimen/size_10"
            android:maxLength="6"
            android:textColor="@color/sj_theme_color"
            android:layout_marginStart="@dimen/size_10"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_getVerifyCode"
            android:layout_width="@dimen/size_80"
            android:layout_height="@dimen/size_26"
            android:text="@string/get_verifyCode"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/size_10"
            android:background="@drawable/bg_get_verify_code"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginEnd="@dimen/size_20"
        android:background="@drawable/confirm_bg"
        android:layout_marginTop="@dimen/size_40"
        android:layout_marginBottom="@dimen/size_30"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"/>
</android.support.v7.widget.LinearLayoutCompat>