<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg"
    android:gravity="center_horizontal">
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/size_200"
        android:layout_height="@dimen/size_200"
        android:src="@mipmap/logo"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:background="@drawable/login_inut_bg"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20">


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20"
                android:text="@string/account"
                android:textColor="#DEDEE0"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_account_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_26"
                android:layout_marginEnd="@dimen/size_80"
                android:layout_marginStart="@dimen/size_14"
                android:background="@drawable/shape_gray_5"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/size_6"
                android:paddingStart="@dimen/size_6"
                android:textColor="#828282"
                android:hint="输入手机号"
                android:textSize="@dimen/font_14"
                tools:text="123456" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginRight="@dimen/size_20"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20"
                android:text="@string/login_password"
                android:textColor="#DEDEE0"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_26"
                android:layout_marginEnd="@dimen/size_80"
                android:layout_marginStart="@dimen/size_14"
                android:background="@drawable/shape_gray_5"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingStart="@dimen/size_6"
                android:textColor="#828282"
                android:textSize="@dimen/font_14"
                tools:text="123456" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginRight="@dimen/size_20"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_keep_pass_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_pass"
            android:textColor="@color/deep_gray_2"
            android:scaleY="0.8"
            android:scaleX="0.8"
            android:button="@null"
            android:drawableLeft="@drawable/keep_pass"
            android:layout_marginStart="@dimen/size_34"
            android:layout_marginTop="@dimen/size_20"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_44"
            android:layout_marginEnd="@dimen/size_80"
            android:layout_marginStart="@dimen/size_80"
            android:layout_marginTop="@dimen/size_10"
            android:background="@drawable/shape_blue_5"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#fff" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_forget_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:textSize="@dimen/font_14"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_30"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>